test/error/iface/errHfsm3.rzy
// funcC is not an event

ErrHfsm3 = Hfsm
  funcA : slot();
  funcB : slot();

  state(One)
    One : state;
  
    funcC = procedure()
    end
    
    One to One by funcA();
    One to One by funcB();
    One to One by funcC();
  end
  
end

